--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_riverpod: ^2.4.5
   flutter_spinkit: ^5.2.0
   freezed_annotation: ^2.4.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   json_annotation: ^4.8.1
   loader_overlay: ^2.3.2
   riverpod_annotation: ^2.3.0
